add_subdirectory( version )
if(APPLE)
    add_subdirectory( macosutils )
endif()
add_subdirectory( global )
add_subdirectory( koplugin )
add_subdirectory( widgetutils )
add_subdirectory( widgets )
add_subdirectory( store )
add_subdirectory( flake )
add_subdirectory( basicflakes )
add_subdirectory( pigment )
add_subdirectory( command )
add_subdirectory( brush )
add_subdirectory( psdutils )
add_subdirectory( color )
add_subdirectory( image )
add_subdirectory( ui )
add_subdirectory( impex )
add_subdirectory( libkis )
add_subdirectory( resources )
add_subdirectory( metadata )
add_subdirectory( resourcewidgets )
add_subdirectory( psd )
add_subdirectory( multiarch )

if (NOT ANDROID AND HAVE_WAYLAND)
   add_subdirectory( surfacecolormanagementapi )
endif()
