
########### install files ###############

install( FILES  
1-All-Color-for-good-colors-choice.gpl
1-classic-kit.gpl
bugslife_final.png-10.gpl
color_wheel-2-rgb.aco.gpl
Fabric_colored.gpl
Fabric_jeans.gpl
Human_eyes.gpl
Human_Hair.gpl
Human_lips.gpl
Human_Skin.gpl
mi-paleta-2009.aco.gpl
Named_Colors.gpl
Nature_flowers.gpl
Nature_Grass.gpl
Nature_stones.gpl
Nature_Water_Sky.gpl
Nature_wood.gpl
NESPAL.gpl.gpl
new_kde.gpl
Paletilla.gpl
photoshop-swatches-sketchlings-swatches.aco.gpl
Skin.gpl.txt.gpl
testgimp_swatches.aco.gpl
Untitled.gpl
    DESTINATION ${DATA_INSTALL_DIR}/calligra/palettes)




